--- a/style.css
+++ b/style.css
@@ -6,18 +6,20 @@
     font-family: india;
     src: url(./GT-America-Compressed-Black-Trial.otf);
 }
-*::selection{
-    color: white;
-    background-color: #111;
-}
+
 *{
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
     font-family: america;
 }
+*::selection{
+    color: white;
+    background-color: #111;
+}
 html,body{
     width: 100%;
+    height: 100%;
     
 }
 
@@ -38,20 +40,24 @@ html,body{
 }
 #nav{
     width: 100%;
-    height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 10px 20px;
     /* background-color: green; */
     position: fixed;
+    z-index: 99;
 }
-#nav >h3{
+#nav h3{
     text-transform: uppercase;
     color: #c45508;
     font-size:25px;
     /* letter-spacing: -2px; */
     font-family: india;
+}
+#nav h3::after{
+    content: "";
+    
 }
 #overlay{
     width: 100%;
@@ -59,7 +65,7 @@ html,body{
     position: absolute;
     top: 0;
 }
-#overlay #scroll{
+#page1 #scroll{
     padding: 8px 12px ;
     background-image: url(https://bowndsranches.com/textures/buttonDarkBg.svg);
     position: absolute;
@@ -76,7 +82,7 @@ html,body{
 
 }
 #page1 >h1{
-    font-size: 15.5vw;
+    font-size: 14vw;
     position: absolute;
     bottom:-5%;
     width: 100%;
@@ -85,6 +91,7 @@ html,body{
     font-family:india;
     font-weight: 900;
     color: #c45508;
+    text-transform: uppercase;
 }
 #page1 h1::before{
     content: "BOWNDS RANCHES.EST.1885";
@@ -118,8 +125,13 @@ html,body{
     font-size: 12vw;
     word-spacing: -12px;
     text-align: center;
-    line-height: 25vh;
+    line-height: 9.7vw;
     letter-spacing: -2px;
+    word-spacing: 16px;
     font-family: india;
     padding: 100px 100px ;
+}
+#page3{
+    width: 100%;
+    height: 100vh;
 }
